tests/grammar/valid/v1_int_32_declaration.c
#include <stdint.h>
#include <stdio.h>

int32_t a = 10;
