tests/grammar/invalid/v5_invalid_cast_multiline2.c
#include <stdint.h>
#include <stdio.h>

int a =  (int
) a;